fix: flex gap and color

--- a/css/style.css
+++ b/css/style.css
@@ -3,22 +3,36 @@
     padding: 0;
     box-sizing: border-box;
 }
+header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+main{
+    display: flex;
+    justify-content: center;
+}
 
 .titolo{
-    color: rebeccapurple;
+    color: #e33470;
 }
 
 .card img{
     width: 50px;
 }
 
-.card h2,h3{
+.card h3{
     font-size: 10px;
     color: white;
 }
+.card h2{
+    font-size: 15px;
+    color: white;
+    font-weight: bold;
+}
 
 .card p{
-    color: blue;
+    color: #4694a7;
 }
 
 .card{
@@ -26,12 +40,16 @@
     padding: 5px;
     display: flex;
     flex-wrap: wrap;
+    width: 33%;
 }
 
 .box{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    width: 80%;
+    row-gap: 10px;
+    column-gap: 5px;
 }
 
 .date{
@@ -39,3 +57,8 @@
     flex-direction: column;
     
 }
+
+/*.front-row{
+    display: flex;
+    justify-content: center;
+}*/
